--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,62 @@
-<h1>Leonardo Correa</h1>
+<div class="welcome">
+    <h1 class="welcome-text">Welcome to CSE Motors</h1>
+</div>
+<section class="hero-section">
+    <div class="hero-box">
+        <div class="hero-box-text-container">
+            <h2 class="hero-title">DMC Delorean</h2>
+            <p class="hero-text">3 Cup holders</p>
+            <p class="hero-text">Superman doors</p>
+            <p class="hero-text">Fuzzy dice!</p>
+        </div>
+        <button class="hero-button">Own Today</button>
+    </div>
+</section>
+<section class="details-section">
+    <div class="upgrades-main-container">
+        <h3 class="upgrades-title">Delorean Upgrades</h3>
+        <div class="upgrades-container">
+            <div class="upgrade">
+                <img src="/images/upgrades/flux-cap2.jpg" alt="flux-capacitor" class="upgrade-img">
+                <h4 class="upgrade-text">Flux Capacitor</h4>
+            </div>
+            <div class="upgrade">
+                <img src="/images/upgrades/flame2.jpg" alt="flame-decals" class="upgrade-img">
+                <h4 class="upgrade-text">Flame Decals</h4>
+            </div>
+            <div class="upgrade">
+                <img src="/images/upgrades/bumper_sticker2.jpg" alt="bumper-sticker" class="upgrade-img">
+                <h4 class="upgrade-text">Bumper Stickers</h4>
+            </div>
+            <div class="upgrade">
+                <img src="/images/upgrades/hub-cap2.jpg" alt="hub-caps" class="upgrade-img">
+                <h4 class="upgrade-text">Hub Caps</h4>
+            </div>
+        </div>
+    </div>
+    <div class="reviews-main-container">
+        <h3 class="upgrades-title">DMC Delorean Reviews</h3>
+        <ul class="reviews">
+            <div class="review">
+                <img src="/images/site/review-1.jpg" class="review-image" alt="review-stars-1">
+                <p class="review-text">"So fast it's almost like traveling in time" (4/5)</p>
+            </div>
+            <div class="review">
+                <img src="/images/site/review-2.jpg" class="review-image" alt="review-stars-2">
+                <p class="review-text">"Coolest ride on the road" (4/5)</p>
+            </div>
+            <div class="review">
+                <img src="/images/site/review-3.jpg" class="review-image" alt="review-stars-3">
+                <p class="review-text">"I'm feeling McFly!" (5/5)</p>
+            </div>
+            <div class="review">
+                <img src="/images/site/review-4.jpg" class="review-image" alt="review-stars-4">
+                <p class="review-text">"The most futuristic ride of our day" (4.5/5)</p>
+            </div>
+            <div class="review">
+                <img src="/images/site/review-5.jpg" class="review-image" alt="review-stars-5">
+                <p class="review-text">"80's livin and I love it!" (5/5)</p>
+            </div>
+        </ul>
+    </div>
+</section>
