--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,9 +1,9 @@
-<nav>
-    <ul>
-        <li>Home</li>
-        <li>Custom</li>
-        <li>Sedan</li>
-        <li>SUV</li>
-        <li>Truck</li>
-    </ul>
+<nav class="nav-bar">
+    <div class="nav-items">
+        <a href="/" class="nav-item">Home</a>
+        <a href="" class="nav-item">Custom</a>
+        <a href="" class="nav-item">Sedan</a>
+        <a href="" class="nav-item">SUV</a>
+        <a href="" class="nav-item">Truck</a>
+    </div>
 </nav>
