--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,10 +10,17 @@
    --highlight: #275285;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   padding: 0;
   margin: 0;
   background-color: var(--background);
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
 }
 
 /* Header CSS */
@@ -199,8 +206,8 @@ body {
   font-size: 1.2rem;
   margin: 0;
 }
-/* Footer CSS */
 
+/* Footer CSS */
 footer {
   padding: 12px 36px;
   display: flex;
@@ -210,6 +217,53 @@ footer {
   color: white;
 }
 
+/* Classifications CSS */
+main {
+  height: 100%;
+  flex-grow: 1;
+}
+
+.classificationTitle {
+  text-align: center;
+}
+
+#inv-display {
+  list-style: none;
+  padding: 0px 5rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: left;
+  align-items: start;
+  gap: 1rem;
+}
+
+.list-item {
+  padding: 10px;
+  border-radius: 1rem;
+  box-shadow: 0px 0px 10px 0px rgba(220, 220, 220, 0.7);
+  background-color: white;
+  max-width: 240px;
+  height: 280px;
+}
+
+.image-container {
+  height: 160px;
+}
+
+.list-image {
+  width: 240px;
+  border-radius: 0.5rem;
+}
+
+.list-title {
+  color: var(--dark-blue);
+  text-decoration: none;
+}
+
+.list-price {
+  font-size: 1.2rem;
+}
+
 /* Responsiveness */
 @media screen and (max-width: 1250px) {
   .details-section {
@@ -217,7 +271,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 710px) {
   .hero-section {
     display: flex;
     justify-content: center;
@@ -253,5 +307,9 @@ footer {
 
   .review {
     width: 350px;
+  }
+
+  #inv-display {
+    justify-content: center;
   }
 }
