--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -264,6 +264,17 @@ main {
   font-size: 1.2rem;
 }
 
+/* Error */
+.error-title {
+  text-align: center;
+  color: rgb(223, 65, 65)
+}
+
+.error-message {
+ text-align: center;
+ color: rgb(223, 65, 65)
+}
+
 /* Responsiveness */
 @media screen and (max-width: 1250px) {
   .details-section {
