--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,6 @@
 <div class="welcome">
     <h1 class="welcome-text">Welcome to CSE Motors</h1>
+    <%- messages() %>
 </div>
 <section class="hero-section">
     <div class="hero-box">
